# html-to-pdf-clean-export

./: .gitignore  LICENSE  README.md  export_html_to_pdf.py  pyproject.toml  requirements.txt
docs/: medium-article-jenkelleman-tight.md  medium-article-jenkelleman.md  medium-article-short.md  medium-article.html  medium-article.md  screenshot-guide.md  why-not-chrome-cli.md
examples/: 2026-football-preview.html  basic-example.html  styled-report-example.html
